[gd_scene load_steps=38 format=2]

[ext_resource path="res://resources/sprites/ui/power.png" type="Texture" id=1]
[ext_resource path="res://resources/sprites/map/floor_basic.png" type="Texture" id=2]
[ext_resource path="res://resources/sprites/map/wall_basic.png" type="Texture" id=3]
[ext_resource path="res://resources/sprites/map/barrel.png" type="Texture" id=4]
[ext_resource path="res://resources/sprites/map/door.png" type="Texture" id=5]
[ext_resource path="res://resources/sprites/map/stairs_inactive.png" type="Texture" id=6]
[ext_resource path="res://resources/sprites/map/trash.png" type="Texture" id=7]
[ext_resource path="res://resources/sprites/map/stairs_active.png" type="Texture" id=8]
[ext_resource path="res://scripts/World.gd" type="Script" id=9]
[ext_resource path="res://resources/sprites/map/blank.png" type="Texture" id=10]
[ext_resource path="res://resources/sprites/ui/armor.png" type="Texture" id=11]
[ext_resource path="res://scripts/Map.gd" type="Script" id=12]
[ext_resource path="res://scripts/VisibilityMap.gd" type="Script" id=13]
[ext_resource path="res://resources/sprites/ui/heart.png" type="Texture" id=14]
[ext_resource path="res://resources/sprites/ui/attack.png" type="Texture" id=15]
[ext_resource path="res://resources/fonts/slkscr.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://scripts/UI.gd" type="Script" id=17]
[ext_resource path="res://scripts/hp_label.gd" type="Script" id=18]
[ext_resource path="res://resources/sprites/map/chest_active.png" type="Texture" id=19]
[ext_resource path="res://resources/sprites/map/chest_inactive.png" type="Texture" id=20]
[ext_resource path="res://scripts/Inventory.gd" type="Script" id=21]
[ext_resource path="res://scripts/TargetingUI.gd" type="Script" id=22]
[ext_resource path="res://resources/sprites/ui/targeting_pointer.png" type="Texture" id=23]
[ext_resource path="res://resources/sprites/ui/icons/placeholder.png" type="Texture" id=24]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )

[sub_resource type="NavigationPolygon" id=2]
vertices = PoolVector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )

[sub_resource type="TileSet" id=8]
0/name = "wall_basic.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 8, 8 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "floor_basic.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 8, 8 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/navigation = SubResource( 2 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "stairs_active.png 2"
2/texture = ExtResource( 8 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 8, 8 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 3 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "stairs_inactive.png 3"
3/texture = ExtResource( 6 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 8, 8 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "door.png 4"
4/texture = ExtResource( 5 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 8, 8 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 4 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "barrel.png 5"
5/texture = ExtResource( 4 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 8, 8 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 5 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "trash.png 6"
6/texture = ExtResource( 7 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 8, 8 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 6 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "chest_active.png 7"
7/texture = ExtResource( 19 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 8, 8 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape = SubResource( 7 )
7/shape_one_way = false
7/shape_one_way_margin = 1.0
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "chest_inactive.png 8"
8/texture = ExtResource( 20 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 8, 8 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0

[sub_resource type="NavigationPolygon" id=9]
vertices = PoolVector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="TileSet" id=10]
0/name = "blank.png 0"
0/texture = ExtResource( 10 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 8, 8 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/navigation = SubResource( 9 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=13]
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 16 )

[node name="World" type="Node"]
script = ExtResource( 9 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 8 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 8
cell_custom_transform = Transform2D( 8, 0, 0, 8, 0, 0 )
cell_tile_origin = 1
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 65536, 3, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 4, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 5, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 0, 0, 131072, 0, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 0, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 5, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 0, 0, 196608, 0, 0, 196609, 6, 0, 196610, 6, 0, 196611, 6, 0, 196612, 0, 0, 196613, 1, 0, 196614, 1, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 1, 0, 196623, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 1, 0, 262151, 0, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 0, 0, 327680, 0, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 4, 0, 327685, 1, 0, 327686, 1, 0, 327687, 0, 0, 327688, 1, 0, 327689, 0, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 0, 0, 393216, 0, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 0, 0, 393221, 1, 0, 393222, 1, 0, 393223, 0, 0, 393224, 1, 0, 393225, 0, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 0, 0, 458752, 0, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 0, 0, 458757, 1, 0, 458758, 1, 0, 458759, 0, 0, 458760, 1, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 524288, 0, 0, 524289, 4, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 1, 0, 524294, 1, 0, 524295, 0, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 0, 0, 589824, 0, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 0, 0, 589829, 1, 0, 589830, 1, 0, 589831, 0, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 0, 0, 655360, 0, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 0, 0, 655365, 1, 0, 655366, 1, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 8, 0, 655375, 0, 0, 720896, 0, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 0, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 0, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 0, 0, 786432, 0, 0, 786433, 1, 0, 786434, 1, 0, 786435, 1, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 1, 0, 786440, 0, 0, 786441, 1, 0, 786442, 1, 0, 786443, 1, 0, 786444, 1, 0, 786445, 1, 0, 786446, 1, 0, 786447, 0, 0, 851968, 0, 0, 851969, 1, 0, 851970, 1, 0, 851971, 1, 0, 851972, 1, 0, 851973, 1, 0, 851974, 4, 0, 851975, 1, 0, 851976, 4, 0, 851977, 1, 0, 851978, 1, 0, 851979, 1, 0, 851980, 1, 0, 851981, 1, 0, 851982, 1, 0, 851983, 0, 0, 917504, 0, 0, 917505, 1, 0, 917506, 1, 0, 917507, 1, 0, 917508, 1, 0, 917509, 1, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 1, 0, 917514, 1, 0, 917515, 1, 0, 917516, 1, 0, 917517, 1, 0, 917518, 1, 0, 917519, 2, 0, 983040, 0, 0, 983041, 0, 0, 983042, 0, 0, 983043, 0, 0, 983044, 0, 0, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0 )
script = ExtResource( 12 )

[node name="VisibilityMap" type="TileMap" parent="."]
tile_set = SubResource( 10 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 8
cell_custom_transform = Transform2D( 8, 0, 0, 8, 0, 0 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 65536, 3, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 4, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 5, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 0, 0, 131072, 0, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 0, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 5, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 0, 0, 196608, 0, 0, 196609, 6, 0, 196610, 6, 0, 196611, 6, 0, 196612, 0, 0, 196613, 1, 0, 196614, 1, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 1, 0, 196623, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 1, 0, 262151, 0, 0, 262152, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 0, 0, 327680, 0, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 4, 0, 327685, 1, 0, 327686, 1, 0, 327687, 0, 0, 327688, 1, 0, 327689, 0, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 0, 0, 393216, 0, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 0, 0, 393221, 1, 0, 393222, 1, 0, 393223, 0, 0, 393224, 1, 0, 393225, 0, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 0, 0, 458752, 0, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 0, 0, 458757, 1, 0, 458758, 1, 0, 458759, 0, 0, 458760, 1, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 524288, 0, 0, 524289, 4, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 1, 0, 524294, 1, 0, 524295, 0, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 0, 0, 589824, 0, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 0, 0, 589829, 1, 0, 589830, 1, 0, 589831, 0, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 0, 0, 655360, 0, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 0, 0, 655365, 1, 0, 655366, 1, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 8, 0, 655375, 0, 0, 720896, 0, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 0, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 0, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 0, 0, 786432, 0, 0, 786433, 1, 0, 786434, 1, 0, 786435, 1, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 1, 0, 786440, 0, 0, 786441, 1, 0, 786442, 1, 0, 786443, 1, 0, 786444, 1, 0, 786445, 1, 0, 786446, 1, 0, 786447, 0, 0, 851968, 0, 0, 851969, 1, 0, 851970, 1, 0, 851971, 1, 0, 851972, 1, 0, 851973, 1, 0, 851974, 4, 0, 851975, 1, 0, 851976, 4, 0, 851977, 1, 0, 851978, 1, 0, 851979, 1, 0, 851980, 1, 0, 851981, 1, 0, 851982, 1, 0, 851983, 0, 0, 917504, 0, 0, 917505, 1, 0, 917506, 1, 0, 917507, 1, 0, 917508, 1, 0, 917509, 1, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 1, 0, 917514, 1, 0, 917515, 1, 0, 917516, 1, 0, 917517, 1, 0, 917518, 1, 0, 917519, 2, 0, 983040, 0, 0, 983041, 0, 0, 983042, 0, 0, 983043, 0, 0, 983044, 0, 0, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0 )
script = ExtResource( 13 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="Status" type="ColorRect" parent="UI"]
margin_left = 2.0
margin_top = 2.0
margin_right = 51.0
margin_bottom = 12.0
mouse_filter = 2
color = Color( 0.513726, 0.462745, 0.611765, 0.607843 )
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="UI/Status"]
margin_left = 1.0
margin_top = 1.0
margin_right = 48.0
margin_bottom = 9.0
color = Color( 0, 0, 0, 0.607843 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="heart" type="Sprite" parent="UI/Status/Background"]
position = Vector2( 1, 1 )
z_index = 1
texture = ExtResource( 14 )
centered = false

[node name="value" type="Label" parent="UI/Status/Background/heart"]
margin_left = 6.0
margin_top = 2.0
margin_right = 30.0
margin_bottom = 22.0
rect_scale = Vector2( 0.25, 0.25 )
custom_fonts/font = SubResource( 11 )
text = "5"
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="max_value" type="Label" parent="UI/Status/Background/heart"]
margin_left = 6.0
margin_top = -2.0
margin_right = 30.0
margin_bottom = 18.0
rect_scale = Vector2( 0.25, 0.25 )
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0.513726, 0.462745, 0.611765, 1 )
text = "5"
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="attack" type="Sprite" parent="UI/Status/Background"]
position = Vector2( 18, 1 )
texture = ExtResource( 15 )
centered = false
flip_h = true

[node name="value" type="Label" parent="UI/Status/Background/attack"]
margin_left = 6.0
margin_top = 2.0
margin_right = 16.0
margin_bottom = 22.0
rect_scale = Vector2( 0.25, 0.25 )
custom_fonts/font = SubResource( 11 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="armor" type="Sprite" parent="UI/Status/Background"]
position = Vector2( 28, 1 )
texture = ExtResource( 11 )
centered = false

[node name="value" type="Label" parent="UI/Status/Background/armor"]
margin_left = 6.0
margin_top = 2.0
margin_right = 16.0
margin_bottom = 22.0
rect_scale = Vector2( 0.25, 0.25 )
custom_fonts/font = SubResource( 11 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="power" type="Sprite" parent="UI/Status/Background"]
position = Vector2( 38, 1 )
texture = ExtResource( 1 )
centered = false

[node name="value" type="Label" parent="UI/Status/Background/power"]
margin_left = 6.0
margin_top = 2.0
margin_right = 16.0
margin_bottom = 22.0
rect_scale = Vector2( 0.25, 0.25 )
custom_fonts/font = SubResource( 11 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skills" type="ColorRect" parent="UI/Status"]
margin_left = 97.0
margin_right = 124.0
margin_bottom = 11.0
color = Color( 0.513726, 0.462745, 0.611765, 0.607843 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="UI/Status/Skills"]
margin_left = 1.0
margin_top = 1.0
margin_right = 26.0
margin_bottom = 10.0
color = Color( 0, 0, 0, 0.607843 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeaponPanel" type="Panel" parent="UI/Status/Skills/Background"]
self_modulate = Color( 0, 0, 0, 0.607843 )
margin_left = 1.0
margin_top = 1.0
margin_right = 8.0
margin_bottom = 8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeaponLabel" type="Label" parent="UI/Status/Skills/Background/WeaponPanel"]
margin_top = 5.0
margin_right = 20.0
margin_bottom = 25.0
rect_scale = Vector2( 0.1, 0.1 )
custom_fonts/font = SubResource( 13 )
text = "z"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeaponSprite" type="Sprite" parent="UI/Status/Skills/Background/WeaponPanel"]
position = Vector2( 3.5, 3.5 )
scale = Vector2( 0.875, 0.875 )
texture = ExtResource( 24 )

[node name="ArmorPanel" type="Panel" parent="UI/Status/Skills/Background"]
self_modulate = Color( 0, 0, 0, 0.607843 )
margin_left = 9.0
margin_top = 1.0
margin_right = 16.0
margin_bottom = 8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeaponLabel2" type="Label" parent="UI/Status/Skills/Background/ArmorPanel"]
margin_top = 5.0
margin_right = 20.0
margin_bottom = 25.0
rect_scale = Vector2( 0.1, 0.1 )
custom_fonts/font = SubResource( 13 )
text = "x"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArmorSprite" type="Sprite" parent="UI/Status/Skills/Background/ArmorPanel"]
position = Vector2( 3.5, 3.5 )
scale = Vector2( 0.875, 0.875 )
texture = ExtResource( 24 )

[node name="UtilityPanel" type="Panel" parent="UI/Status/Skills/Background"]
self_modulate = Color( 0, 0, 0, 0.607843 )
margin_left = 17.0
margin_top = 1.0
margin_right = 24.0
margin_bottom = 8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UtilityLabel" type="Label" parent="UI/Status/Skills/Background/UtilityPanel"]
margin_top = 5.0
margin_right = 20.0
margin_bottom = 25.0
rect_scale = Vector2( 0.1, 0.1 )
custom_fonts/font = SubResource( 13 )
text = "c"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UtilitySprite" type="Sprite" parent="UI/Status/Skills/Background/UtilityPanel"]
position = Vector2( 3.5, 3.5 )
scale = Vector2( 0.875, 0.875 )
texture = ExtResource( 24 )

[node name="Inventory" type="ColorRect" parent="UI"]
margin_left = 2.0
margin_top = 13.0
margin_right = 51.0
margin_bottom = 62.0
mouse_filter = 2
color = Color( 0.513726, 0.462745, 0.611765, 0.607843 )
script = ExtResource( 21 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="UI/Inventory"]
margin_left = 1.0
margin_top = 1.0
margin_right = 48.0
margin_bottom = 48.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.607843 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="InventoryList" type="ItemList" parent="UI/Inventory/Background"]
margin_right = 188.0
margin_bottom = 188.0
rect_scale = Vector2( 0.25, 0.25 )
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
mouse_filter = 2
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Targeting" type="CenterContainer" parent="UI"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.5, 0.5 )
script = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UP" type="Sprite" parent="UI/Targeting"]
modulate = Color( 1, 1, 1, 0.607843 )
position = Vector2( 0, -10 )
rotation = 4.71239
texture = ExtResource( 23 )

[node name="Right" type="Sprite" parent="UI/Targeting"]
modulate = Color( 1, 1, 1, 0.607843 )
position = Vector2( 8, 0 )
texture = ExtResource( 23 )

[node name="Down" type="Sprite" parent="UI/Targeting"]
modulate = Color( 1, 1, 1, 0.607843 )
position = Vector2( 0, 10 )
rotation = 1.5708
texture = ExtResource( 23 )

[node name="Left" type="Sprite" parent="UI/Targeting"]
modulate = Color( 1, 1, 1, 0.607843 )
position = Vector2( -8, 0 )
rotation = 3.14159
texture = ExtResource( 23 )
